bsc-webview/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bsc-webview
  labels:
    name: bsc-webview
