bsc-webview/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsc-webview
  namespace: bsc-webview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: bsc-webview
