bsc-webview/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bsc-webview
  namespace: bsc-webview
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/group.name: "dsc-clsuter"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  tls:
    - hosts:
        - bsc-webview.chuyong.kr
  rules:
    - host: "bsc-webview.chuyong.kr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bsc-webview
                port:
                  number: 80
